--- a/my-appp/styles/basket.css
+++ b/my-appp/styles/basket.css
@@ -205,6 +205,21 @@
   position: fixed;
   background: rgba(0,0,0,0.5);
 }
+.browse-teachers-btn{
+    padding: 1rem 2rem;
+    font-weight: 500;
+    text-decoration: none;
+    background-color: var(--primary-color);
+    font-size: 1.6rem;
+    color: var(--white);
+    border-radius: 0.8rem;
+    transition: var(--transition);
+    white-space: nowrap;
+}
+
+.browse-teachers-btn:hover{
+    background-color: var(--primary-hover);
+}
 
 @media (max-width: 1024px) {
     .basket-item {
